--- a/RentaCarsWEB/Views/Estado/Index.cshtml
+++ b/RentaCarsWEB/Views/Estado/Index.cshtml
@@ -24,9 +24,9 @@
             @Html.DisplayFor(modelItem => item.Nombre)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.EstadoID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.EstadoID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.EstadoID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.EstadoID }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.EstadoID }) |
+            
         </td>
     </tr>
 }
