--- a/RentaCarsWEB/Views/Reserva/Create.cshtml
+++ b/RentaCarsWEB/Views/Reserva/Create.cshtml
@@ -15,14 +15,12 @@
     <div class="form-horizontal">
         <h4>Reserva</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.VehiculoID)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Vehiculo, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.VehiculoID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Vehiculo.Marca, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Vehiculo.Marca, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.VehiculoID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.VehiculoID, "", new { @class = "text-danger" })
             </div>
         </div>
 
